tests/kyverno/allowlist/resources/non-whitelisted-subscription.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: aap-operator
  namespace: openshift-operators
spec:
  channel: stable
  name: ansible-automation-platform-operator
  source: redhat-operators
  sourceNamespace: openshift-marketplace
